salesforce/force-app/main/default/objects/Case/fields/AI_Analysis__c.field-meta.xml
<CustomField>
    <fullName>AI_Analysis__c</fullName>
    <description>AI-generated analysis from Bedrock Agent including summary, recommendations, and similar cases</description>
    <label>AI Analysis</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>