salesforce/force-app/main/default/objects/Case/fields/AI_Analysis_Status__c.field-meta.xml
<CustomField>
    <fullName>AI_Analysis_Status__c</fullName>
    <description>Status of AI analysis processing</description>
    <label>AI Analysis Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Not_Applicable</fullName>
                <label>Not Applicable</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>