salesforce/force-app/main/default/objects/Case/fields/AI_Analyzed_Date__c.field-meta.xml
<CustomField>
    <fullName>AI_Analyzed_Date__c</fullName>
    <description>Timestamp when AI analysis was completed</description>
    <label>AI Analyzed Date</label>
    <type>DateTime</type>
</CustomField>