salesforce/force-app/main/default/objects/Case/fields/AI_Feedback__c.field-meta.xml
<CustomField>
    <fullName>AI_Feedback__c</fullName>
    <label>AI Feedback</label>
    <type>Picklist</type>
    <description>Feedback on AI case analysis quality - filled by case agent on closure</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accurate &amp; Helpful</fullName>
            </value>
            <value>
                <fullName>Partially Accurate</fullName>
            </value>
            <value>
                <fullName>Inaccurate Analysis</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>AI Analysis Not Generated</fullName>
            </value>
            <value>
                <fullName>AI Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>