salesforce/force-app/main/default/objects/Case/fields/AI_Feedback_Comments__c.field-meta.xml
<CustomField>
    <fullName>AI_Feedback_Comments__c</fullName>
    <label>AI Feedback Comments</label>
    <type>LongTextArea</type>
    <length>1000</length>
    <description>Detailed feedback on what AI got right, wrong, or missed</description>
</CustomField>