salesforce/force-app/main/default/objects/Case/fields/AI_Suggestions__c.field-meta.xml
<CustomField>
    <fullName>AI_Suggestions__c</fullName>
    <description>Self-resolution steps suggested by AI</description>
    <label>AI Suggestions</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>