salesforce/force-app/main/default/objects/Case/fields/Self_Resolvable__c.field-meta.xml
<CustomField>
    <fullName>Self_Resolvable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the case can be resolved by the user without admin intervention</description>
    <label>Self Resolvable</label>
    <type>Checkbox</type>
</CustomField>