salesforce/force-app/main/default/objects/Case/fields/Similar_Cases__c.field-meta.xml
<CustomField>
    <fullName>Similar_Cases__c</fullName>
    <description>References to similar past cases found by AI</description>
    <label>Similar Cases</label>
    <length>50000</length>
    <type>Html</type>
</CustomField>